--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <title>ECcoolBnb</title>
     <script src="https://kit.fontawesome.com/d093c31219.js" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" /> -->
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Figtree">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Dancing Script">
   </head>
-  <body>
+  <body style="margin:0px">
     <div id="root"></div>
   </body>
 </html>
