--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
     href="https://fonts.googleapis.com/css?family=Figtree">
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Dancing Script">
+    <link rel="icon" href="/favicon.ico">
   </head>
   <body style="margin:0px">
     <div id="root"></div>
