--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Figtree">
     <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Dancing Script">
     <link rel="icon" href="/favicon.ico">
   </head>
